# classmate

./: .gitignore  DEPLOY.md  HELP.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json
scripts/: install-galene.ps1  install-plugnmeet.ps1  ionos-deploy.sh  nginx-cm.codes-ai.uk.conf  run-tauri.mjs  server-init-settings.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/public_pages/: download.html  help.html  index.html  notes-pad.html  portal.html
src-tauri/src/: headless.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: ai_lab.rs  analytics.rs  announcements.rs  auth.rs  backup.rs  cashbook.rs  email.rs  enrollments.rs  forums.rs  gradebook.rs  help.rs  lti.rs  materials.rs  mod.rs  notes.rs  openstax.rs  parent.rs  polls.rs  push.rs  quizzes.rs  rubrics.rs  schedule.rs  schools.rs  sessions.rs  student.rs  submissions.rs  sync.rs  tenancy.rs  video.rs  whatsapp.rs  whatsapp_api.rs
src-tauri/src/db/: mod.rs  schema.sql  schema_v10.sql  schema_v11.sql  schema_v12.sql  schema_v13.sql  schema_v14.sql  schema_v15.sql  schema_v16.sql  schema_v17.sql  schema_v18.sql  schema_v19.sql  schema_v20.sql  schema_v21.sql  schema_v22.sql  schema_v23.sql  schema_v3.sql  schema_v4.sql  schema_v5.sql  schema_v6.sql  schema_v7.sql  schema_v8.sql  schema_v9.sql
src-tauri/src/hub/: mod.rs
src-tauri/src/sync_server/: mod.rs
src-tauri/src/video/: mod.rs
src-tauri/src/web_portal/: admin.rs  lectures.rs  mod.rs  notes.rs  teacher.rs
src/lib/: api.ts  materials.ts  speech.ts  types.ts  web-speech.d.ts  whatsapp.ts
src/lib/i18n/: en.ts  (+2 more)
(+27 files in other folders)
