[package]
name = "classmate"
version = "0.1.0"
description = "ClassMate - local-first classroom platform"
authors = ["ClassMate"]
edition = "2021"

[lib]
name = "classmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "classmate-server"
path = "src/bin/classmate-server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.16"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
local-ip-address = "0.6"
rand = "0.8"
ureq = { version = "2", features = ["json"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "native-tls"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "blocking"] }
